--- a/FlightManager/ASPFlightManager/Views/Flights/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Flights/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Flights</h1>
 
 @if (this.User.IsInRole("Admin"))
 {
@@ -14,7 +14,7 @@
 }
 
 <div style=" display: flex; justify-content: center; align-items: center;">
-    
+
     <img src="https://media2.giphy.com/media/l2Sq87bt4GOdAnlGo/giphy.gif?cid=6c09b95212kqjuoh07dtbffjxgseqpjiekxjyctmwgul3r21&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g" alt="Alternate Text" />
 </div>
 
@@ -86,10 +86,15 @@
                 <td>
                     @if (this.User.IsInRole("Admin"))
                     {
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <li style="list-style-type:none">
+                            <a asp-action="Edit" asp-route-id="@item.Id" 
+                               style="list-style-type: none; border: solid; border-color: black; border-width: 1px; border-radius: 4px; padding: 5px; color: black">Edit</a>
+                            <a asp-action="Delete" asp-route-id="@item.Id" 
+                               style="list-style-type: none; border: solid; border-color: black; border-width: 1px; border-radius: 4px; padding: 5px; color: black">Delete</a>
+                        </li>
                     }
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" 
+                       style="list-style-type:none; border:solid; border-color: black; border-width:1px;border-radius:4px;padding:5px; color:black">Details</a>
 
                 </td>
             </tr>
