--- a/FlightManager/ASPFlightManager/Views/Reservations/Create.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Create.cshtml
@@ -11,11 +11,12 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @*<label asp-for="Reservation.Flight"></label>*@
             <select asp-for="Reservation.Flight" class="form-control">
                 <option value="">Select a flight</option>
                 @foreach (var flight in Model.Flights)
                 {
-                    <option value="@flight.Id">@($"{flight.Id}aaaaaa")</option>
+                    <option value="@flight.Id">@($"{flight.Id}")</option>
                 }
             </select>
             <div class="form-group">
