--- a/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Reservations</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -36,46 +36,58 @@
             <th>
                 @Html.DisplayNameFor(model => model.TicketType)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Flight)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SecondName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SSN)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nationality)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TicketType)
-            </td>
-            <td>
-                @if (this.User.IsInRole("Admin"))
-                {
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                }
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SecondName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SSN)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nationality)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TicketType)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Flight)
+                </td>
+                <td>
+                     @if (this.User.IsInRole("Admin"))
+                    {
+                        <li style="list-style-type:none">
+                            <a asp-action="Edit" asp-route-id="@item.Id" 
+                               style="list-style-type: none; border: solid; border-color: black; border-width: 1px; border-radius: 4px; padding: 5px; color: black">Edit</a>
+                            <a asp-action="Delete" asp-route-id="@item.Id" 
+                               style="list-style-type: none; border: solid; border-color: black; border-width: 1px; border-radius: 4px; padding: 5px; color: black">Delete</a>
+                        </li>
+                    }
+                    <a asp-action="Details" asp-route-id="@item.Id" 
+                       style="list-style-type:none; border:solid; border-color: black; border-width:1px;border-radius:4px;padding:5px; color:black">Details</a>
 
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
