--- a/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<Data.Models.Reservation>
+﻿@model ASPFlightManager.Views.Reservations.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Reservations";
 }
 
 <h1>Reservations</h1>
@@ -13,34 +13,38 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                FirstName
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SecondName)
+                SecondName
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort">
+                    @Html.DisplayNameFor(model => model.Reservations[0].LastName)
+                </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                <a asp-page="./Index" asp-route-sortOrder="@Model.EmailSort">
+                    @Html.DisplayNameFor(model => model.Reservations[0].Email)
+                </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SSN)
+                SSN
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+               PhoneNumber
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Nationality)
+                Nationality
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TicketType)
+                TicketType
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Reservations)
         {
             <tr>
                 <td>
