--- a/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
@@ -1,14 +1,25 @@
-﻿@model ASPFlightManager.Views.Reservations.IndexModel
+﻿@page
+@model ASPFlightManager.Views.Reservations.IndexModel
 
 @{
     ViewData["Title"] = "Reservations";
 }
 
-<h1>Reservations</h1>
+<h2>Reservations</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-page="./Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by name:
+            <input type="text" name="SearchString" value="@Model.CurrentFilter" />
+            <input type="submit" value="Search" class="btn btn-primary" /> |
+            <a asp-page="./Index">Back to full List</a>
+        </p>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
@@ -89,9 +100,3 @@
         }
     </tbody>
 </table>
-
-
-@*<paging page-no="Model.PageNo"
-        page-size="Model.PageSize"
-        total-records="Model.TotalRecords">
-</paging>*@
