--- a/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
@@ -8,25 +8,25 @@
 
 @if (this.User.IsInRole("Admin"))
 {
-    <div class="text-center">
+    <div class="text-center" , style="display:flex; width:100%; justify-content:center; flex-direction:column">
         <h3>Employee quote of the day :</h3>
-        <h3>From the moment i understood the weakness of my flesh it disgusted me...</h3>
+        @*<img src="~/css/cooltext455480011249154.gif" alt="Alternate Text" style="height:9em; width:73em" />*@
     </div>
 
 }
 
 <body style="background-image:url(https://cdn.discordapp.com/attachments/599576927883231246/1226475830075592734/4k-plane-taking-off-pr0e0lwl3pshaszh.webp?ex=6624e7a0&is=661272a0&hm=0c6b9e66ef306194d8776bcad6d965b18a65ef0d3820751c425feea3519e7044&); background-repeat:no-repeat; background-position: center; background-repeat: no-repeat; background-size:cover">
 
-<div class="text-center">
-    <h1 class="display-4" style="font-size:4em; font-family:Georgia, 'Times New Roman', Times, serif">Welcome to SRR Airlines!</h1>
-    @*add a place to make reservations*@
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation" style="font-size:2em; margin-top:2em; font-weight:bolder">
-        <li class="nav-item" style="list-style-type:none;">
-        <li class="nav-item"style="list-style-type:none; border:solid; border-color: black; border-width:1px;border-radius:4px">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Create">Make a Reservation!</a>
-        </li>
-    </button>
-</div>
+    <div class="text-center">
+        <h1 class="display-4" style="font-size:4em; font-family:Georgia, 'Times New Roman', Times, serif">Welcome to SRR Airlines!</h1>
+        @*add a place to make reservations*@
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation" style="font-size:2em; margin-top:2em; font-weight:bolder">
+            <li class="nav-item" style="list-style-type:none;">
+            <li class="nav-item" style="list-style-type:none; border:solid; border-color: black; border-width:1px;border-radius:4px">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Create">Make a Reservation!</a>
+            </li>
+        </button>
+    </div>
 
 </body>
