--- a/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 {
     <div class="text-center" , style="display:flex; width:100%; justify-content:center; flex-direction:column">
         <h3>Employee quote of the day :</h3>
-        @*<img src="~/css/cooltext455480011249154.gif" alt="Alternate Text" style="height:9em; width:73em" />*@
+        <img src="~/css/TheFleshGif.gif" alt="Alternate Text" style="height:9em; width:73em" />
     </div>
 
 }
