--- a/FlightManager/ASPFlightManager/Views/Shared/_Layout.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Shared/_Layout.cshtml
@@ -22,9 +22,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Flights" asp-action="Index">Flights</a>
                         </li>
                         @if (this.User.IsInRole("Admin"))
@@ -50,7 +47,7 @@
 
     <footer class="border-top footer text-muted" style="background-color:white">
         <div class="container">
-            &copy; 2024 - SRR Airlines; Created by Denislava & Ivana  - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - SRR Airlines; Created by Denislava & Ivana
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
